apps/immich/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql
  namespace: immich
spec:
  selector:
    app.kubernetes.io/name: postgresql
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgresql
  namespace: immich
spec:
  serviceName: immich-postgresql
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgresql
    spec:
      containers:
        - name: postgresql
          image: ghcr.io/immich-app/postgres:17-vectorcharm
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: iscsi
        resources:
          requests:
            storage: 20Gi
