apps/immich/network-policy.yaml
# Default deny all ingress and egress for the entire namespace
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
---
# Immich server: ingress from ingress-nginx
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: server
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            io.kubernetes.pod.namespace: ingress-nginx
      authentication:
        mode: "required"
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: postgresql
      authentication:
        mode: "required"
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: valkey
      authentication:
        mode: "required"
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: machine-learning
      authentication:
        mode: "required"
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
# PostgreSQL: ingress only from immich-server
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgresql
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: server
      authentication:
        mode: "required"
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# Valkey: ingress only from immich-server
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: valkey
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: valkey
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: server
      authentication:
        mode: "required"
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# Machine learning: ingress only from immich-server
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: machine-learning
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: machine-learning
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: server
      authentication:
        mode: "required"
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
